infrastructure/concourse/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: concourse
  labels:
    app: concourse
