infrastructure/concourse/k8s/concourse-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concourse-worker
  namespace: concourse
  labels:
    app: concourse-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concourse-worker
  template:
    metadata:
      labels:
        app: concourse-worker
    spec:
      containers:
        - name: concourse-worker
          image: concourse/concourse:7.11.2
          args: ["worker"]
          volumeMounts:
            - name: concourse-keys
              mountPath: /concourse-keys
              readOnly: true
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: concourse-keys
          secret:
            secretName: concourse-keys
